# healthinsurance

./: .env  .gitignore  README.md  TESTING_GUIDE.md  TEST_REPORT.md  capacitor.config.ts  download-page.html  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
backend/: add_test_admins.py  auto_renew_customers.py  invoices.py  ispbilling.db  ispbilling.db.backup  ispbilling.db.backup-20251031-122738  ispbilling.db.old  migrate_add_balance_after.py  migrate_add_bank_details.py  migrate_add_collected_by.py  migrate_add_company_state_code.py  migrate_add_gst_invoice_fields.py  migrate_add_invoice_counter.py  migrate_add_renewal_cycles.py  migrate_add_sent_type.py  migrate_add_user_id_to_localities_companies.py  migrate_addon_bill_fields.py  migrate_customer_passwords.py  migrate_plans_tax_fields.py  models.py  pyproject.toml  renew_specific_customers.py  seed_data.py  test_prepaid_postpaid.py  test_renewal.py  update_gst_customers.py
backend/app/: auth.py  database.py  main.py  main.py.bak-20251030-195001  models.py  schemas.py
backend/app/core/: database.py  dependencies.py  security.py
backend/app/models/: models.py
backend/app/routers/: addon_bills.py  admin.py  auth.py  companies.py  complaints.py  customer.py  customers.py  dashboard.py  employee.py  employees.py  employees.py.backup-20251031-123221  invoices.py  localities.py  manual_invoices.py  models.py  notifications.py  payments.py  permissions.py  plans.py  schemas.py  settings.py  superadmin.py  transactions.py  uploads.py
backend/app/schemas/: schemas.py
(+158 files in other folders)
